fix(trip update): correctly link trip and users on update